# ci-runners

./: .env.example  .gitignore  Cargo.toml  README.md  autologon.reg  cinet.xml  common.sh  configure-base.sh  configure-runner.sh  create-runner.sh  destroy-runner.sh  download.sh  flake.nix  init.ps1  init.reg  inject.sh  job.ps1  list-libvirt-guests.sh  list-registered-runners.sh  list-runner-volumes.sh  macos13.xml  monitor.toml.example  mount-runner.sh  prejob.ps1  refreshenv.ps1  register-runner.sh  reserve-runner.sh  shell.nix  software.reg  system.reg  ubuntu2204.xml  unregister-runner.sh  warm.ps1  windows10.xml  windows2019.xml
.forgejo/workflows/: self-test-codeberg.yml
.github/: CODEOWNERS
.github/workflows/: deploy-book.yml  main.yml  self-test.yml
actions/checkout/: action.yml
actions/runner-select/: action.yml
actions/runner-select-queueless/: action.yml
analysis/: collate-runs.sh  compute-critical-path.sh  fetch-job-runs.sh  fetch-workflow-runs.sh
analysis/queue/: .gitignore  README.md  find-effective-queueing.sh  find-jobs-with-large-delays.sh  find-self-hosted-jobs.sh
analysis/usage/: 2025-09-24.md  2025-10-27.md  2025-11-04.md  Cargo.toml  README.md  download-logs.sh
analysis/usage/src/: main.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md  style-guide.md
book/src/deployment/: monitor.md  server-hetzner.md
book/src/images/: minimal.md
book/src/monitor/: api.md  hacking.md
book/src/servo/: maintenance.md
book/src/servo/images/: macos-arm64.md  macos-x64.md  minimal.md  ubuntu2204.md  windows10.md
docker/: .gitignore  README.md  build.sh
docker/base/: Dockerfile
docker/docker_jit_monitor/: Cargo.toml  run_mitmproxy_and_gh.sh  servo_ci.service
docker/docker_jit_monitor/etc/: notify-email@.service  servo_ci_runner_send_mail.sh
docker/docker_jit_monitor/src/: github_api.rs  main.rs
docker/gh_runner/: Dockerfile
docker/hos_builder/: Dockerfile
docker/hos_commandline_tools/: Dockerfile
docker/runner/: Dockerfile  run_mitmproxy_and_gh.sh
docker/runner/signing-util/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sign.js  test_main.py
macos13/: boot-script  build-image.sh  configure-base.sh  configure-runner.sh  guest.xml  init.sh  register-runner.sh  virt-clone.sh
monitor/: Cargo.toml  monitor.toml.example
monitor/cli/: Cargo.toml
monitor/cli/src/: lib.rs
monitor/hypervisor/: Cargo.toml
monitor/hypervisor/src/: impl_libvirt.rs  impl_utm.rs  impl_utm_backend.rs  lib.rs  libvirt.rs  utm.rs
monitor/settings/: Cargo.toml
monitor/settings/src/: data.rs  lib.rs  profile.rs  queue.rs  units.rs
monitor/shell/: Cargo.toml
monitor/shell/src/: lib.rs
monitor/src/: auth.rs  dashboard.rs  data.rs  get-snapshot-creation.sh  github.rs  hypervisor.rs  hypervisor_libvirt.rs  hypervisor_utm.rs  id.rs  image.rs  lib.rs  libvirt.rs  main.rs  policy.rs  profile.rs  rocket_eyre.rs  runner.rs  screenshot-guest.sh  settings.rs  shell.rs  utm.rs  utm_dummy.rs  utm_macos.rs  zfs.rs
monitor/src/image/: macos13.rs  ubuntu2204.rs  ubuntu2204_rust.rs  windows10.rs
monitor/templates/: dashboard.html  index.html
monitor/web/: Cargo.toml
monitor/web/src/: auth.rs  lib.rs  rocket_eyre.rs
profiles/base-ubuntu2204/: guest.xml
profiles/macos13/: boot-script
profiles/servo-macos13/: guest.xml
profiles/servo-macos14/: boot-script  guest.xml
profiles/servo-macos15/: boot-script  guest.xml
profiles/servo-macos15-arm/: guest.xml
profiles/servo-ubuntu2204/: boot-script  meta-data  user-data
profiles/servo-ubuntu2204-bench/: boot-script  meta-data  user-data
profiles/servo-ubuntu2204-rust/: boot-script
profiles/servo-ubuntu2204-wpt/: boot-script  guest.xml  meta-data  user-data
profiles/servo-windows10/: boot-script
profiles/ubuntu2204/: boot-script
server/: build-nixos-installer-kexec.sh  deploy-intermittent-tracker-staging.sh  deploy.sh  first-time-install.sh  install-nixos.sh  install-or-reinstall.sh  start-nixos-installer.sh  update.sh
server/intermittent-tracker/: deploy-staging.sh
server/nixos/: .gitignore  configuration.nix  deploy  do  flake.nix  hardware-configuration.nix  image-deps.nix  monitor.nix  python-app.nix
server/nixos/ci0/: monitor.toml
server/nixos/ci1/: monitor.toml
server/nixos/ci2/: monitor.toml
server/nixos/ci3/: monitor.toml
server/nixos/ci4/: monitor.toml
static/: macos13.sh  macos15.sh
static/macos13/: org.servo.ci.plist
ubuntu2204/: boot-script  build-image.sh  configure-base.sh  configure-runner.sh  guest.xml  init.sh  meta-data  network-config  register-runner.sh  user-data  virt-clone.sh
ubuntu2204-bench/: boot-script  guest.xml
ubuntu2204-docker/: .gitignore  Dockerfile  README.md  SignAndTest.Dockerfile  build.sh
ubuntu2204-rust/: boot-script  boot-script.sh  guest.xml  user-data
ubuntu2204-rust1/: guest.xml  meta-data
ubuntu2204-rust2/: guest.xml
ubuntu2204-wpt/: boot-script.sh  build-image.sh  configure-base.sh  configure-runner.sh  guest.xml  init.sh  meta-data  register-runner.sh  user-data  virt-clone.sh
windows10/: autounattend.xml  boot-script  build-image.sh  configure-base.sh  configure-runner.sh  guest.xml  init.ps1  refreshenv.ps1  register-runner.sh  software.reg  system.reg  warm.ps1
windows2019/: configure-base.sh  configure-runner.sh  init.ps1  register-runner.sh  software.reg  warm.ps1
