[workspace]
resolver = "3"
default-members = ["monitor"]
members = ["monitor", "monitor/cli", "monitor/settings", "monitor/web"]
exclude = ["docker"]

[workspace.dependencies]
bytesize = "2.0.1"
chrono = { version = "0.4.39", features = ["serde"] }
cli = { path = "monitor/cli" }
dotenv = "0.15.0"
jane-eyre = "0.3.0"
mktemp = "0.5.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
settings = { path = "monitor/settings" }
toml = "0.8.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web = { path = "monitor/web" }
