[workspace]
members = ["cli", "settings", "web"]

[workspace.dependencies]
cli = { path = "cli" }
dotenv = "0.15.0"
jane-eyre = "0.3.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
settings = { path = "settings" }
toml = "0.8.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web = { path = "web" }

[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-rocket"] }
askama_rocket = "0.12.0"
atomic-write-file = { version = "0.2.2", features = ["unnamed-tmpfile"] }
bytesize = "2.0.1"
chrono = "0.4.39"
cli = { workspace = true }
cmd_lib = "1.9.5"
crossbeam-channel = "0.5.13"
dotenv = { workspace = true }
http = "0.2"
itertools = "0.13.0"
jane-eyre = { workspace = true }
mktemp = "0.5.1"
reflink = "0.1.3"
rocket = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.120"
settings = { workspace = true }
subprocess = "0.2.9"
tokio = { version = "1.40.0", features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
web = { workspace = true }
