[workspace]
members = ["cli", "settings", "web"]

[workspace.dependencies]
bytesize = "2.0.1"
cli = { path = "cli" }
dotenv = "0.15.0"
jane-eyre = "0.3.0"
mktemp = "0.5.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
settings = { path = "settings" }
toml = "0.8.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web = { path = "web" }

[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.14.0" }
askama_web = { version = "0.14.4", features = ["rocket-0.5"] }
atomic-write-file = { version = "0.2.2", features = ["unnamed-tmpfile"] }
bytesize = { workspace = true }
cfg-if = "1.0.1"
chrono = "0.4.39"
cli = { workspace = true }
cmd_lib = "1.9.5"
crossbeam-channel = "0.5.13"
dotenv = { workspace = true }
http = "0.2"
itertools = "0.13.0"
jane-eyre = { workspace = true }
mktemp = { workspace = true }
reflink = "0.1.3"
rocket = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.120"
settings = { workspace = true }
subprocess = "0.2.9"
tokio = { version = "1.40.0", features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
web = { workspace = true }
rand = "0.9.1"

[dev-dependencies]
settings = { workspace = true, features = ["test"] }
