[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.14.0" }
askama_web = { version = "0.14.4", features = ["rocket-0.5"] }
atomic-write-file = { version = "0.2.2", features = ["unnamed-tmpfile"] }
bytesize = { workspace = true }
cfg-if = "1.0.1"
chrono = { workspace = true }
cli = { workspace = true }
cmd_lib = "1.9.5"
crossbeam-channel = "0.5.13"
dotenv = { workspace = true }
http = "0.2"
itertools = "0.13.0"
jane-eyre = { workspace = true }
mktemp = { workspace = true }
reflink = "0.1.3"
rocket = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.120"
settings = { workspace = true }
subprocess = "0.2.9"
tokio = { version = "1.40.0", features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
web = { workspace = true }
rand = "0.9.1"

[target.'cfg(target_os = "macos")'.dependencies]
osakit = { version = "0.3.1", features = ["full"] }

[dev-dependencies]
settings = { workspace = true, features = ["test"] }
