[package]
name = "docker_jit_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11.8"
serde = { version = "1", features = ["derive"]}
thiserror = "2.0.12"
serde_json = "1.0.141"
ctrlc = "3.4.7"
cyme = "1.7"
